--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@fontsource/montserrat": "^4.5.14",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
+    "react-checkbox-tree": "^1.8.0",
     "react-dom": "^18.2.0",
     "underscore": "^1.13.6"
   },
