--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-checkbox-tree": "^1.8.0",
     "react-dom": "^18.2.0",
+    "react-string-diff": "^0.2.0",
     "underscore": "^1.13.6"
   },
   "devDependencies": {
