--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@fontsource/montserrat": "^4.5.14",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "react": "^18.2.0",
     "react-checkbox-tree": "^1.8.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
     "react-string-diff": "^0.2.0",
     "underscore": "^1.13.6"
   },
